# Kronos

./: .dir-locals.el  Cargo.toml  Dockerfile  Makefile  README.md
config/: clusterrole.yaml  kronos.yaml  service-account.yaml
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
crates/helpers/src/k8s_helpers/: kubernetes.rs  mod.rs
crates/helpers/src/system/: bpffs.rs  bump_memlock_rlimit.rs  kernel.rs  mod.rs
crates/kronosbpf-common/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: CRD.rs  errors.rs  lib.rs
examples/nginx/: kronos_file.yaml
kronos/: Cargo.toml
kronos-cli/: Cargo.toml  README.md
kronos-cli/src/: checkenvironment.rs  install.rs  main.rs
kronos-common/: Cargo.toml
kronos-common/src/: lib.rs
kronos-ebpf/: Cargo.toml
kronos-ebpf/src/: lib.rs  main.rs  vmlinux.rs
kronos/src/: main.rs
kronos/src/cache_manager/: mod.rs
kronos/src/ebpf_manager/: bpfloader.rs  mod.rs
kronos/src/k8s_manager/: error.rs  k8s_watch.rs  mod.rs
kronos/src/k_daemon/: mod.rs
xtask/src/: build_ebpf.rs  run.rs
