[package]
name = "kronos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# kronos-bpf-common = { path = "../crates/kronosbpf-common" }
helpers = {path = "../crates/helpers"}
types = {path = "../crates/types"}
aya = "0.12"
aya-log = "0.2"
kronos-common = { path = "../kronos-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
futures = "0.3.31"
thiserror = "2.0.4"
kube = { version = "0.95.0", features = ["runtime", "derive"] }
k8s-openapi = {version="0.23.0",features=["latest"]}

dashmap = "6.1.0"

[[bin]]
name = "kronos"
path = "src/main.rs"
