[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]

schemars = "0.8.21"
serde = {version="1.0.210",features = ["derive","rc"]}
serde_json = "1.0.128"
serde_yaml = "=0.8.26"
serde_with = "1.13"
kube = { version = "0.95.0", features = ["runtime", "derive"] }
k8s-openapi = {version="0.23.0",features=["latest"]}

kronos-common = { path = "../../kronos-common", features = ["user"] }
procfs = { version = "0.17.0", default-features = false }

aya = { version ="0.12.0" }

# kronosbpf-common = { path = "../kronosbpf-common", features = ["user"] }
